<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="fitXY"
                android:src="@drawable/lops"></ImageView>
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Lets consider a case where we are asked to print a string in C.
We would simplu use printf() function and print the string. What if we are asked to print the same
string 1000 times? Ofcourse we can use printf() 1000 times but that is not a efficient way obviously.
Here comes the role of loops in C. There are 3 types of loop in C:\n
●for loop\n
●while loop\n
●do-while loop\n"
            android:textSize="20dp"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#5200897B"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/forloop"
            android:textColor="#00A88F"
            android:textSize="30dp"
            android:textStyle="bold"></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="A for loop is a way of executing a statement a known number of times. It is entry controlled loop which means condition is checked before entering the loop body. A for loop has 3 expression:\n
●Initialization Expression: It means initialization of loop counter. For example: int i=0;\n\n
●Test Expression: This is where condition is tested. If condition is true then body of loop is executed and control is passed to update expression else program exits from loop. For example: i \u2264 5;\n\n
●Update Expression: After execution of body is done, control is passed to update expression where counter value is incremented or decremented. Then control is  passed back to Test expression. for example:i++;
"
            android:textSize="20dp"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Example:"
            android:textColor="#292E28"
            android:textSize="30dp"
            android:textStyle="bold"></TextView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/photo_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:background="#4FFB8C00"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/wileloop"
            android:textColor="#FB8C00"
            android:textSize="30dp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="While loop is used when number of iterations are unknown to user unlike for loop. The loop is terminated based on conditions. The loop body is run as long as the condition is satisfied and terminates when condition becomes false. It is also entry controlled loop like for loop.\n\n
Syntax:\n
while(condition)\n
{\n
body\n
}\n
"
            android:textSize="20dp"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Example:"
            android:textColor="#292E28"
            android:textSize="30dp"
            android:textStyle="bold"></TextView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp">

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/photo_view2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:background="#606042F4"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/dowileloop"
            android:textColor="#0005FD"
            android:textSize="30dp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Do-while loop is similar to while loop only difference being, condition is checked after execution of body. Hence it is also controlled exit controlled loop. Minimum number of times do-while loop can run is 1.\n\n
Syntax:\n
do\n
{\n
body\n
}\nwhile(condition)\n"
            android:textSize="20dp"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Example:"
            android:textColor="#292E28"
            android:textSize="30dp"
            android:textStyle="bold"></TextView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/photo_view3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

        </androidx.cardview.widget.CardView>










    </LinearLayout>


</ScrollView>


